# rusty-pandas

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarking/: 2008_test.py
res/: Exp_EverythingCells.csv  Exp_EverythingCells_COL1A2.csv  example.csv  test.csv
src/: dataframe.rs  lib.rs  main.rs  series.rs
src/dataframe/: mod.rs
src/funky_functions/: mod.rs
src/series/: mod.rs
