[package]
name = "rusty_pandas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_pandas"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.15"
rayon = "1.5"
rand = "0.8.4"
glob = "0.3.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
